View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023946 | Community | OCCT:Mesh | public | 2013-05-07 08:24 | 2013-12-19 13:55 |
Reporter | heyuqi | Assigned To | abv | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 6.7.0 | Fixed in Version | 6.7.0 | ||
Summary | 0023946: Uninitialized variable aNewEdge3 used. | ||||
Description | Attached please find the patch for this issue. I think the new link should be assigned to aNewEdge3, not aNewEdge1. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
BRepMesh_Delaun.cxx.patch (512 bytes) |
|
The fix is pushed to branch CR23946, please review |
|
I wonder about such misprints. warning check rulez |
|
Dear BugMaster, Branch CR23946 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: 3eeaa541222d20a7cc43c466bf6cc71b5483aa9d Number of compiler warnings: occt component : Linux: 2 (2 on master) Windows: 11 (11 on master) products component : Linux: 0 (0 on master) Windows: 64 (64 on master) Regressions: No regressions Improvements: No improvements Testing cases: Not needed Testing on Linux: Total MEMORY difference: 365966272 / 365872296 Total CPU difference: 41571.67000000109 / 45787.80000000135 Testing on Windows: Total MEMORY difference: 418101244 / 420619968 Total CPU difference: 31981.90625 / 30709.921875 There are not differences in images found by testdiff. |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-05-07 08:24 | heyuqi | New Issue | |
2013-05-07 08:24 | heyuqi | Assigned To | => oan |
2013-05-07 08:24 | heyuqi | File Added: BRepMesh_Delaun.cxx.patch | |
2013-05-07 12:04 | abv | Note Added: 0024317 | |
2013-05-07 12:04 | abv | Assigned To | oan => pdn |
2013-05-07 12:04 | abv | Status | new => resolved |
2013-05-07 12:39 |
|
Note Added: 0024319 | |
2013-05-07 12:39 |
|
Status | resolved => reviewed |
2013-05-23 11:00 |
|
Note Added: 0024479 | |
2013-05-23 11:00 |
|
Test case number | => Not needed |
2013-05-23 11:00 |
|
Assigned To | pdn => bugmaster |
2013-05-23 11:00 |
|
Status | reviewed => tested |
2013-05-23 12:39 | bugmaster | Target Version | => 6.7.0 |
2013-05-24 13:06 | abv | Changeset attached | => occt master f404c5c2 |
2013-05-24 13:06 | abv | Assigned To | bugmaster => abv |
2013-05-24 13:06 | abv | Status | tested => verified |
2013-05-24 13:06 | abv | Resolution | open => fixed |
2013-12-19 13:53 | bugmaster | Status | verified => closed |
2013-12-19 13:55 | bugmaster | Fixed in Version | => 6.7.0 |