0023946: Uninitialized variable aNewEdge3 used

Code for creation of extra edges in BRepMesh (special case) corrected